--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .menu-wrap {
   position: fixed;
-  top: 200px;
-  right: 100px;
+  top: 0px;
+  left: 0px;
   z-index: 1;
 }
 
@@ -24,7 +24,7 @@
   width: 60px;
   height: 60px;
   padding: 1rem;
-  background: rgba(13, 110, 139, 0.75);
+  background: rgba(13, 110, 139, 0.3);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,7 +43,7 @@
           flex: none;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -87,6 +87,93 @@
           transform: rotate(225deg);
 }
 
+.menu-wrap .toggler:checked ~ .menu {
+  visibility: visible;
+}
+
+.menu-wrap .toggler:checked ~ .menu div {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition-duration: 0.75s;
+          transition-duration: 0.75s;
+}
+
+.menu-wrap .toggler:checked ~ .menu div div {
+  opacity: 1;
+  -webkit-transition: opacity 0.4s ease 0.4s;
+  transition: opacity 0.4s ease 0.4s;
+}
+
+.menu-wrap .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu-wrap .menu div {
+  background: rgba(13, 110, 139, 0.85);
+  border-radius: 50%;
+  width: 200vw;
+  height: 200vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.menu-wrap .menu div div {
+  background: none;
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vh;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu div div ul li {
+  list-style: none;
+  color: black;
+  font-size: 1.5rem;
+  padding: 1rem;
+}
+
+.menu-wrap .menu div div ul li a {
+  color: inherit;
+  text-decoration: none;
+  -webkit-transition: color 0.4s ease;
+  transition: color 0.4s ease;
+}
+
+.menu-wrap .menu div div ul li a:hover {
+  color: #d0c163;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -107,15 +194,15 @@ body {
 }
 
 #showcase {
-  background: rgba(13, 110, 139, 0.75);
-  color: #fff;
+  background: rgba(13, 110, 139, 0.3);
+  color: white;
   height: 100vh;
   position: relative;
 }
 
 #showcase:before {
   content: "";
-  background: url("../img/showcase.jpg") no-repeat center center/cover;
+  background: url("../img/showing.jpg") no-repeat center center/cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -147,6 +234,7 @@ body {
 }
 
 #showcase p {
+  padding: 1rem;
   font-size: 1.3rem;
 }
 
@@ -156,13 +244,13 @@ body {
   text-decoration: none;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
-  color: #fff;
-  background: rgba(13, 110, 139, 0.75);
+  color: black;
+  background: rgba(13, 110, 139, 0.3);
   -webkit-transition: all 1s ease-in;
   transition: all 1s ease-in;
 }
 
 .btn:hover {
-  color: rgba(229, 148, 0, 0.9);
+  color: #d0c163;
 }
 /*# sourceMappingURL=style.css.map */
