--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,16 @@
-$primary-color: rgba(13, 110, 139, 0.75);
-$secondary-color: rgba(229, 148, 0, 0.9);
-$overlay-color: rgba(24, 39, 51, 0.85);
+$text-colour: rgba(0, 0, 0, 1);
+
+$background-colour: rgba(13, 110, 139, 0.3);
+$text-colour: rgba(255, 255, 255, 1);
+
+$ham-bg-colour: rgba(13, 110, 139, 0.3);
+$ham-txt-colour: rgba(255, 255, 255, 1);
+$ham-overlay: rgba(13, 110, 139, 0.85);
+
+$menu-text-colour: rgb(0, 0, 0);
+$menu-highlight: rgb(208, 193, 99);
 $menu-speed: 0.75s;
 
-// chnage the variable names to be hamburger specific
-// Add where and what we use the colours for
+$btn-text-colour: $menu-text-colour;
+$btn-highlight: $menu-highlight;
+$btn-bg-colour: $background-colour;
