--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,8 +20,8 @@ body {
 }
 
 #showcase {
-  background: $primary-color;
-  color: #fff;
+  background: $background-colour;
+  color: $text-colour;
   height: 100vh;
   // We will use the before pseudo selector to add the overlay and the overlay has to be position absolute. NOTE that position absolute is relative to its first relative container which of course we want to be the showcase. If not, it will use the body as the as its container.
 
@@ -29,7 +29,7 @@ body {
 
   &:before {
     content: "";
-    background: url("../img/showcase.jpg") no-repeat center center/cover;
+    background: url("../img/showing.jpg") no-repeat center center/cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -53,21 +53,21 @@ body {
   }
 
   p {
+    padding: 1rem;
     font-size: 1.3rem;
   }
 }
-
 .btn {
   display: inline-block;
   border: none;
   text-decoration: none;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
-  color: #fff;
-  background: $primary-color;
+  color: $btn-text-colour;
+  background: $btn-bg-colour;
   transition: all 1s ease-in;
 
   &:hover {
-    color: $secondary-color;
+    color: $btn-highlight;
   }
 }
